<resources>
    <string name="app_name">TrackRecordRace</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">Register</string>
    <string name="prompt_username">Enter Username</string>
    <string name="prompt_password">Enter Password</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="signup">Signup</string>

    <string name="error_blank_username">Please enter a username</string>
    <string name="error_join">Join Error</string>
    <string name="error_blank_password">Please enter a password</string>
    <string name="error_intro">Signup</string>
    <string name="error_mismatched_passwords">Passwords don\'t match</string>
    <string name="error_end">Something went wrong</string>
    <string name="progress_signup">Working...</string>
    <string name="progress_login">Logging on...</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="login">Login</string>
    <string name="title_activity_welcome">My Profile</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_login_signup">Log in to your Account</string>

    <string name="hello">Hello World, ParseStarterProjectActivity!</string>

    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="LoginBtn">Login</string>
    <string name="SignupBtn">Sign Up</string>
    <string name="LogoutBtn">Log Out</string>
    <string name="Welcome">Welcome!</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main_tabs">TrackRecordRace</string>

    <string name="go_run">Run Icon</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_send_challenge">SendChallengeActivity</string>
    <string name="title_activity_challenge_flow">ChallengeFlowActivity</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="title_activity_search_friend">Add Friend</string>
    <string name="title_activity_challenge_response_run">ChallengeResponseRunActivity</string>
    <string name="title_activity_help_activity">TrackRecordRace Help</string>

    <string name="location_message_title">Location services not enabled</string>
    <string name="location_message">You cannot record your metrics without location services.\nTurn on location services now?</string>
    <string name="affirmative">OK</string>
    <string name="cancel">Cancel</string>
    <string name="cont">Continue</string>

    <string name="send_loss_push"> completed your challenge and beat your time! Looks like you\'ll have to work harder!</string>
    <string name="send_win_push"> completed your challenge lost to you! Congratulations!</string>

    <string name="help_welcome_paragraph">Welcome to TrackRecordRace!\nThis app lets you track your individual runs, view some statistics on them, and even race your friends!</string>
    <string name="begin_run_instructions">To begin an individual run without racing, press the run icon on the main screen.\nMake sure location services are on!</string>
    <string name="running_instructions">To begin, press the play icon. This will toggle to a pause function if needed.\n To finish and automatically save your run, press the stop icon.</string>
    <string name="add_friend_instructions">To view and add your friends, click on the icon and enter the username of the person you want to add.\nTo delete a friend, click on the delete icon and enter their name in pop up box.</string>

    <string name="challenge_instructions">To begin a challenge, press the icon.\nThis will open up a running page. Run it as an individual run. When you have finished, press the Stop icon.\nThis will open up a window where you can select a friend to send the challenge to.\nThey will be sent the distance you ran and how long you did it in.</string>
    <string name="challenge_send_instructions">When another user sends you a challenge, you will recieve a notification on your phone.\n The challenge will also appear under your \"Challenges\" tab.\nTo respond to the challenge, press the "Run" button. This will take you to a run screen where you will complete the challenge. \n When the challenge is complete, both users are notified and their win and lose counts adjusted.</string>
    <string name="save">Save Settings</string>
</resources>
