<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                tools:context="com.seniorproject.trafton.trackrecordrace.HelpActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_activity_help"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:titleTextColor="@color/textColorPrimary"
        android:layout_marginBottom="8sp"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:layout_below="@+id/toolbar_activity_help"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:isScrollContainer="true"
        android:scrollbars="vertical"
        android:layout_below="@id/toolbar_activity_help"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <TextView
        android:text="@string/help_welcome_paragraph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

        <LinearLayout
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_directions_run_white_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
            android:text="Individual Runs"
            android:layout_marginTop="5dp"
            android:textSize="18dp"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        </LinearLayout>

    <TextView
        android:text="@string/begin_run_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/running_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_people_white_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text=" Friends"
                android:layout_marginTop="5dp"
                android:textSize="18dp"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
            android:text="@string/add_friend_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/flag_checkered_24dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text=" Challenges"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_vertical"
                android:textSize="18dp"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="36dp"/>
        </LinearLayout>
        <TextView
            android:text="Sending a Challenge"
            android:textSize="18dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/challenge_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="Recieving a Challenge"
            android:textSize="18dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/challenge_send_instructions"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    </ScrollView>

</RelativeLayout>
